# RAG_Class_Revision_Agent

./: .gitignore  CLAUDE.md  README.md  api.py  pyproject.toml  requirements-retrieval.txt  requirements.txt  retrieval_requirements.txt  simple_api.py  start_retrieval_api.py
.claude/plans/: 01.Frontend_implementation_plan.md  02.Chunking_stratergies_VTT.md
.claude/specs/: 01_Frontend_implementation_specs.md  02.Chunking_stratergies_VTT_spec.md  03.embedding_chunks_push_toVDB_spec.md
data/chunks/test/: chunks.json  chunks_summary.json
data/embeddings/: embedding_status.json
frontend/: app.py  requirements.txt
frontend/.streamlit/: config.toml
frontend/components/: file_uploader.py  github_input.py  retrieval_button.py  review_card.py  settings_panel.py  step_indicator.py
frontend/pages/: github_upload.py  review.py  success.py
frontend/streamlit_pages/: chat.py  code_upload.py  landing.py  vtt_upload.py
frontend/styles/: custom_css.py
frontend/utils/: file_handler.py  session_state.py  validators.py
src/exception/: custom_exception.py
src/ingestion/: __init__.py  chunk_builder.py  chunk_reader.py  config.py  cue_merger.py  embedding_client.py  embedding_pipeline.py  metadata_enricher.py  pipeline.py  topic_detector.py  vector_store_client.py  vtt_parser.py
src/logger/: custom_logger.py
src/retrieval/api/: dependencies.py  main.py  simple_router.py
src/retrieval/config/: settings.py
src/retrieval/core/: hybrid_search.py  reranker.py  rrf_fusion.py  simple_search.py
src/retrieval/models/: common.py  requests.py  responses.py
(+14 files in other folders)
